--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ google-auth==1.23.0
 google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
 grpcio==1.34.0
+gunicorn==20.0.4
 h5py==2.10.0
 idna==2.10
 importlib-metadata==3.1.1
@@ -26,6 +27,7 @@ numpy==1.18.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
 pandas==1.1.4
+pickle-mixin==1.0.2
 Pillow==8.0.1
 powerline-status==2.7
 protobuf==3.14.0
